--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   cupertino_icons: ^1.0.6
   go_router: ^13.2.2
   flutter_riverpod: ^2.5.1
+  like_button: ^2.0.5
 
 dev_dependencies:
   flutter_test:
